--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 #root {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
 }
