--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,31 @@
     will-change: clip-path, opacity;
 }
 
+@keyframes swipeGradient {
+    0% {
+        background-position: 200% 0%;
+    }
+    100% {
+        background-position: -200% 0%;
+    }
+}
+
+.swipe-gradient {
+    background-image: linear-gradient(
+        120deg,
+        #00aeff,
+        #3a8ef6,
+        #7a5fff,
+        #e86fff,
+        #7a5fff,
+        #3a8ef6,
+        #00aeff
+    );
+    background-size: 800% 100%;
+    animation: swipeGradient 10s linear infinite;
+    transition: all 0.3s ease;
+}
+
 body {
     margin: 0;
     display: flex;
@@ -47,13 +72,21 @@ body {
 
 button {
     border-radius: 8px;
-    padding: 0.6em 1.2em;
     font-size: 1rem;
     font-weight: 500;
     font-family: inherit;
     cursor: pointer;
     transition: border-color 0.25s;
 }
+
+button.normal {
+    padding: 0.6em 1.2em;
+}
+
+button.small {
+    padding: 0.3em 0.6em;
+}
+
 button:hover {
     border-color: #646cff;
 }
