--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,12 @@
     }
 }
 
+.task-item-title {
+    overflow: hidden;
+    white-space: pre-line;
+    text-align: left;
+}
+
 .swipe-gradient {
     background-image: linear-gradient(
         120deg,
